# 23raindrops

./: .gitignore  Cargo.toml  README.md
src/: generate_interpolators.rs  graphics.rs  interpolators.rs  main.rs  texture_gen.rs  texture_utils.rs
src/glsl/: default.frag.glsl  fragment.glsl  vertex.glsl
