[package]
name = "twentythreeraindrops"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "23raindrops"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
wav = "1.0.0"
png = "0.17.2"
rand = "0.8.4"
image = "0.23.14"
